--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,6 @@
-.App {
-  text-align: center;
+body{
+  background-color: #f0f0f0;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .paises{
         transform:scale(1.2);
         -ms-transform:scale(1.2);
@@ -30,6 +18,25 @@
     -moz-transform: scale(1.212);
     -o-transform: scale(1.212);
     transform: scale(1.212);
+}
+
+.iconos{
+  transform:scale(1.2);
+  -ms-transform:scale(1.2);
+  -moz-transform:scale(1.2);
+  -webkit-transform:scale(1.2);
+  -o-transform:scale(1.2);
+  -webkit-transition: all 500ms ease-in-out;
+  -moz-transition: all 500ms ease-in-out;
+  -ms-transition: all 500ms ease-in-out;
+  -o-transition: all 500ms ease-in-out;
+}
+
+.iconos:hover{
+-webkit-transform: scale(1.21);
+-moz-transform: scale(1.212);
+-o-transform: scale(1.212);
+transform: scale(1.212);
 }
 
 .menu{
